# AsteroidFinder

./: .gitignore  CMakeLists.txt  README.md  index.html  relatorio.md
src/: astro_image.cpp  astro_image.h  fits_opencv.cpp  main.cpp  processor.cpp  processor.h
